fix alignments of header elements

--- a/CSS/Styles-Wk3.css
+++ b/CSS/Styles-Wk3.css
@@ -19,11 +19,12 @@ body {
    
   }
 
-  .container{
-     
-      
+  .headercont {
+    margin-left: 30px;
+    margin-right: 30px;
   }
 
+ 
 
   .navbar-header{
    position: relative;
@@ -82,10 +83,21 @@ body {
 
   /*BODY*/
   .main{
-    background-color: #458491;
+    
     color:#ffffff;
+    overflow-x: hidden;
+    
+    
     
   }
+
+  .insidecont {
+    background-color: #458491;
+    margin: 5px 5px 5px 5px ;
+    padding: 15px 15px 15px 15px;
+  }
+
+
 
   /********** Large devices only **********/
 @media (min-width: 1200px) {
